--- a/tasks/link_dotfiles.yml
+++ b/tasks/link_dotfiles.yml
@@ -1,7 +1,9 @@
+---
 - name: dotfiles dirs
-  file:
+  ansible.builtin.file:
     path: ~/.{{ item }}
     state: directory
+    mode: "0755"
   loop:
     - config
     - zshrcd
@@ -9,15 +11,16 @@
     - dotfiles
 
 - name: dotfiles symlink
-  file:
-    src: '{{ ansible_env.PWD }}/roles/matjah_mac/files/dotfiles/{{ item }}'
+  ansible.builtin.file:
+    src: "{{ ansible_env.PWD }}/roles/matjah_mac/files/dotfiles/{{ item }}"
     path: ~/.{{ item }}
     state: link
+    mode: "0755"
   loop:
     - ansible.cfg
     - gitconfig
     - gitignore_global
     - zshrc
     - ssh/config
-  tags: 
+  tags:
     - dotfiles
