--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,6 +43,11 @@ repos:
         entry: codespell readme.md code.py
         language: python
         types: [text]
+  - repo: https://github.com/adrienverge/yamllint.git
+    rev: v1.26.3
+    hooks:
+      - id: yamllint
+        args: [-c=.yamllint]
   - repo: https://github.com/sirosen/check-jsonschema
     rev: 0.16.0
     hooks:
