--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,22 +9,6 @@ on:
     - cron: "0 5 * * 4"
 
 jobs:
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.x
-          cache: pip
-      - name: Install test dependencies
-        run: pip3 install -r tests/requirements.txt
-      - name: Lint
-        run: |
-          yamllint .
-          ansible-lint
-
   integration:
     name: Integration test
     runs-on: ${{ matrix.os }}
@@ -61,6 +45,8 @@ jobs:
         run: |
           idempotency=${mktemp}
           ansible-playbook main.yml | tee -a ${idempotency}
-          tail ${idempotency} | grep -q 'changed=0.*failed=0' && (echo 'Idempotency test: pass' && exit 0) || (echo 'Idempotency test: fail' && exit 1)
+          tail ${idempotency} | grep -q 'changed=0.*failed=0' \
+            && (echo 'Idempotency test: pass' && exit 0) \
+            || (echo 'Idempotency test: fail' && exit 1)
         env:
           ANSIBLE_FORCE_COLOR: "1"
