--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,13 @@ jobs:
         os:
           - macos-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: actions/cache@v3
+        with:
+          path: |
+            .cache/
+            ${HOME}/Library/Caches/pip/
+          key: cache-pip3
       - name: Uninstall GH Actions builtin Homebrew
         run: |
           curl -sLO https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh
@@ -32,7 +38,7 @@ jobs:
           sudo rm -rf /Applications/Firefox.app
           sudo rm -rf /Applications/Google\ Chrome.app
       - name: Install test dependencies
-        run: sudo pip3 install ansible
+        run: sudo -H pip3 install ansible
       - name: Setup test environment
         run: |
           cp tests/ansible.cfg ./ansible.cfg
